Align correction
Navigation bar (max-width: 480px screens) align-items center.

--- a/styles/common.css
+++ b/styles/common.css
@@ -95,13 +95,13 @@ button {
     .navigation_bar {
         display: flex;
         flex-direction: column;
-        justify-content: space-between;
+        justify-content: center;
     }
 
     .navigation_bar ul {
         display: flex;
         flex-direction: column;
-        margin: 0 auto;
+        align-items: center;
     }
     
     .page {
